add video links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h1>Hack it, Build it,<br>Ship it, Sell it</h1>
 					<h1 style="font-size: 3.0em;">(with Tutor)</h1>
 					<p>Régis Behmo</p>
-					<p style="line-height: 0;">Open edX end-of-year celebration, Dec. 14th 2021</p>
+					<p style="line-height: 0;">Open edX end-of-year celebration, Dec. 14th 2021 (<a href="https://www.youtube.com/watch?v=_7GVNkEQ3qU" target="_blank" rel="noopener noreferrer">video</a>)</p>
 				</section>
 
 				<section>
